--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@ obj
 CriptoWalletApi/bin/
 CriptoWalletApi/obj/
 CriptoWalletApi/.vs/
+/CriptoWalletApi/.vs/CriptoWalletApi/DesignTimeBuild/.dtbcache.v2
+/CriptoWalletApi/bin/Debug/net6.0/CriptoWalletApi.dll
+/CriptoWalletApi/bin/Debug/net6.0/CriptoWalletApi.pdb
+/CriptoWalletApi/obj/Debug/net6.0/ref/CriptoWalletApi.dll
+/CriptoWalletApi/obj/Debug/net6.0/refint/CriptoWalletApi.dll
+/CriptoWalletApi/obj/Debug/net6.0/CriptoWalletApi.pdb
+/CriptoWalletApi/obj/Debug/net6.0/CriptoWalletApi.dll
+/CriptoWalletApi/obj/Debug/net6.0/CriptoWalletApi.csproj.CoreCompileInputs.cache
