--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ CriptoWalletApi/.vs/
 /CriptoWalletApi/obj/Debug/net6.0/CriptoWalletApi.pdb
 /CriptoWalletApi/obj/Debug/net6.0/CriptoWalletApi.dll
 /CriptoWalletApi/obj/Debug/net6.0/CriptoWalletApi.csproj.CoreCompileInputs.cache
+/CriptoWalletApi/.vs/CriptoWalletApi/v17/.futdcache.v2
+/CriptoWalletApi/.vs/ProjectEvaluation/criptowalletapi.metadata.v5.2
+/CriptoWalletApi/.vs/ProjectEvaluation/criptowalletapi.projects.v5.2
