--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ CriptoWalletApi/.vs/
 /CriptoWalletApi/.vs/CriptoWalletApi/v17/.futdcache.v2
 /CriptoWalletApi/.vs/ProjectEvaluation/criptowalletapi.metadata.v5.2
 /CriptoWalletApi/.vs/ProjectEvaluation/criptowalletapi.projects.v5.2
+/CriptoWalletApi/obj/Debug/net6.0/CriptoWalletApi.assets.cache
+/CriptoWalletApi/obj/Debug/net6.0/CriptoWalletApi.csproj.AssemblyReference.cache
+/CriptoWalletApi/obj/Debug/net6.0/CriptoWalletApi.GeneratedMSBuildEditorConfig.editorconfig
+/CriptoWalletApi/obj/CriptoWalletApi.csproj.nuget.dgspec.json
+/CriptoWalletApi/obj/CriptoWalletApi.csproj.nuget.g.props
+/CriptoWalletApi/obj/project.assets.json
+/CriptoWalletApi/obj/project.nuget.cache
